@@ -23,6 +23,8 @@
 #ifndef _cmdline_h
 #define _cmdline_h
 
+#define MAX_HEADER_SIZE 1024
+
 struct gengetopt_args_info {
   char * user_arg;	/* Username to send to HTTPS proxy for auth. */
   char * pass_arg;	/* Password to send to HTTPS proxy for auth. */
@@ -31,7 +33,7 @@ struct gengetopt_args_info {
   char * proxyhost_arg;	/* HTTPS Proxy host to connect to. */
   int proxyport_arg;	/* HTTPS Proxy host portnumber to connect to. */
   char * dest_arg;	/* Destination host to built the tunnel to. */
-  char * header_arg;	/* Extra headers to send to HTTPS proxy */
+  char header_arg[MAX_HEADER_SIZE];	/* Extra headers to send to HTTPS proxy */
   char * remproxy_arg;  /* Remote proxy to tunnel to. */
   int verbose_flag;	/* Turn on verbosity (default=off). */
   int ntlm_flag;	/* Turn on ntlm  (default=off). */
